# thechainarchive

./: .gitignore  README.md  pyproject.toml
contracts/src/: ChainArchiveAnchor.sol
contracts/test/: ChainArchiveAnchor.t.sol
src/chainarchive/: __init__.py  blockchain_interface.py  encryption.py
tests/: test_encryption.py  test_interface.py
